# python-rust-fst

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
rust/: Cargo.toml
rust/src/: lib.rs  map.rs  set.rs  util.rs
rust_fst/: __init__.py  _native.pyi
tests/: test_map.py  test_set.py
