[package]
name = "rust_fst"
version = "0.3.0"
authors = ["Johannes Baiter <johannes.baiter@gmail.com>"]
edition = "2021"

[lib]
name = "rust_fst"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py37"] }
fst = { version = "0.4", features = ["levenshtein"] }
regex-automata = { version = "0.1", features = ["transducer"] }
memmap2 = "0.9"
thiserror = "1.0"
